--- a/rds-tschloss.yaml
+++ b/rds-tschloss.yaml
@@ -69,7 +69,7 @@ objects:
         forcePull: true
         from:
           kind: ImageStreamTag
-          name: jboss-decisionserver63-openshift:1.3
+          name: jboss-decisionserver63-openshift:1.3-5
           namespace: ${IMAGE_STREAM_NAMESPACE}
       type: Source
     triggers:
